fix(patient): corrige fluxo de criação de paciente